--- a/1.Introduction/1.0.Introduction.md
+++ b/1.Introduction/1.0.Introduction.md
@@ -1,4 +1,4 @@
-In resent years, many and many commercial firms are involving in Open Source Software. Not only as users of software, but also involving in as developers.
+In recent years, most commercial firms are involving in Open Source Software. Not only as users of software, but also involving in as developers.
 Different from some well known OSS project ran by enterprise such RedHat which is one of most famous distribution of Linux Operating System, many firms develop software for their own sake and distribute it as OSS for other developers in OSS community.
 
 Bonaccorsi and Rossi in 2006[1] revealed that the motivation of commercial firm is mostly economical reasons. On the other hand many researchers found that motivation of individual developers are extrinsic motivation such as their career development, or intrinsic motivation such as reputation, enjoyment.
