--- a/2.LiteratureReview/2.1.OSSParticipationMotivation.md
+++ b/2.LiteratureReview/2.1.OSSParticipationMotivation.md
@@ -1,3 +1,6 @@
 # 2.1. Paricipation Motivation research
-In OSS research field, participation motivation of individual developers or that of firm's are really notble topic.
-And there are a lot of previous papers did qualitative analysis to figure out what makes individual developers to join OSS communities.
+In OSS research field, participation motivation of individual developers or that of firms are notable topic.
+And there are a lot of previous papers did qualitative analysis to figure out what makes individual developers to participate in OSS development.
+
+
+Hann et al in 2004[4] and Lerner and Tirole in 2002[5] revealed that reputation is one of the biggest motivation of developers to involving in OSS project development.
