--- a/4.Analysis/4.5.Discussion.md
+++ b/4.Analysis/4.5.Discussion.md
@@ -1,6 +1,5 @@
 ## Discussion
-
-The result shows that firm's involvement does not change network characteristics of developers network in OSS projects. (Fact)
+The result shows that firm's involvement does not change network characteristics of developers network in OSS projects.
 
 Network characteristics change is caused by participation of the developers who have no collaboration experience with project managers or other developers beforehand.
 
@@ -15,3 +14,6 @@ The developers who are motivated with firm's involvement start contributing with
 In this research, we do not take developers characteristics such as developers skill level, experience, belongings, etc into account. So we could not make valid model to asses firm's involvement effect to project network characteristics.
 
 ## Theoretical implication
+In this study, we investigated how firm's involvement affect OSS project developers network and project success.
+We tested the hypotheses using longitudinal data of 998 OSS projects with main development language JavaScript, hosted at github.com which is the most emerging OSS hosting site in the world.
+As a result, it emerged that firm's involvement has nothing to do with developers network characteristics change. This work has several theoretical implications.
