--- a/2.LiteratureReview/2.0.LiteratureReview.md
+++ b/2.LiteratureReview/2.0.LiteratureReview.md
@@ -1,2 +1,2 @@
 # 2.0
-In OSS field, there are many researchers who conduct variety of analysis. They are divided into two main streams. First one is participation motivation research. Second is OSS project success research.
+In OSS field, there arevariety of research. Grewal, R(2013) conducted quantitative analysis on whole OSS research. Two main waves of analysis are motivation research and success research.
