--- a/2.LiteratureReview/2.1.OSSParticipationMotivation.md
+++ b/2.LiteratureReview/2.1.OSSParticipationMotivation.md
@@ -1,6 +1,10 @@
 # 2.1. Paricipation Motivation research
-In OSS research field, participation motivation of individual developers or that of firms are notable topic.
-And there are a lot of previous papers did qualitative analysis to figure out what makes individual developers to participate in OSS development.
-
-
+Because OSS development is not commercial oriented activity, many researchers questioned why individual developers participate in OSS software. Motivation research were often conducted with qualitatively such as using questionnair.
+As a result of many research, there are mainly two groups of motivation of individual developers, which are intrinsic and extrinsic motivation [4,5,8].
 Hann et al in 2004[4] and Lerner and Tirole in 2002[5] revealed that reputation is one of the biggest motivation of developers to involving in OSS project development.
+
+<!-- TODO add some explanation here -->
+And Crowston et al[8] revealed these kind of motivations are frequently mentioned as extrinsic motivations.
+
+<!-- TODO add some explanation here -->
+Motivations like enjoyment or having fun[9] are named intrinsic motivation[8].
