--- a/2.LiteratureReview/2.1.OSSParticipationMotivation.md
+++ b/2.LiteratureReview/2.1.OSSParticipationMotivation.md
@@ -1,10 +1,18 @@
-# 2.1. Paricipation Motivation research
-Because OSS development is not commercial oriented activity, many researchers questioned why individual developers participate in OSS software. Motivation research were often conducted with qualitatively such as using questionnair.
+# 2.1. OSS participation motivation
+Because OSS development is not commercial oriented activity, many researchers questioned why individual developers participate in OSS software. Motivation research were often conducted with qualitatively.
 As a result of many research, there are mainly two groups of motivation of individual developers, which are intrinsic and extrinsic motivation [4,5,8].
 Hann et al in 2004[4] and Lerner and Tirole in 2002[5] revealed that reputation is one of the biggest motivation of developers to involving in OSS project development.
+<!-- something about reputation here -->
+Reward motives such as career development are said.[4, 10, 11]
+<!-- something about career development motivation here -->
+Crowston et al[8] concluded his review research that these kind of motivations are frequently mentioned as extrinsic motivations.
 
-<!-- TODO add some explanation here -->
-And Crowston et al[8] revealed these kind of motivations are frequently mentioned as extrinsic motivations.
-
-<!-- TODO add some explanation here -->
 Motivations like enjoyment or having fun[9] are named intrinsic motivation[8].
+<!-- something about intrinsic motivation here -->
+
+Recent years, some researchers dig this line of research exploring what motivates individual developers to keep participating in OSS projects.[12, 13]
+Result of these researches shows that motivations of individual developers are not static but changing over time. Shah revealed that need software development drives the participation initially, but the most of developers leave once their needs are met.
+For developers who remain, the participation would become a hobby. Fang and Neufeld found that the initial motivations to participate in OSS projects are not related to long-term participation, but identity construction behaviors and situated learning are positively related to sustainable participation.[12]
+
+On the other hand, motivations at firm level are different from individual level.
+Software companies are involved in OSS development through creating a service around OSS or sponsoring OSS projects and employing engineers[14]. Surveys conducted by Hars and Ou in 2002 show that 45% of contributors are paid by firms for participation, directly or indirectly.
