literature review OSS success measures

--- a/2.LiteratureReview/2.1.OSSParticipationMotivation.md
+++ b/2.LiteratureReview/2.1.OSSParticipationMotivation.md
@@ -16,3 +16,4 @@ For developers who remain, the participation would become a hobby. Fang and Neuf
 
 On the other hand, motivations at firm level are different from individual level.
 Software companies are involved in OSS development through creating a service around OSS or sponsoring OSS projects and employing engineers[14]. Surveys conducted by Hars and Ou in 2002 show that 45% of contributors are paid by firms for participation, directly or indirectly.
+Bonaccorsi and Rossi examined the reasons that firms are investing internal resouces in OSS development.[1] They found the Italian software firms are motivated to involved in OSS development because smaller firms can innovate. The quality and reliability of OSS make it available.
