--- a/2.LiteratureReview/2.2.OSSProjectSuccess.md
+++ b/2.LiteratureReview/2.2.OSSProjectSuccess.md
@@ -1,11 +1,23 @@
 ## 2.2.1 OSS Project Success
+OSS success is one main topic in OSS research area which is about OSS success measures and how to assess project success.
+### Success measures
+In previous literature, several OSS project success measures have been proposed.
+Based on OSS development and IS related field, Crowston, et al in 2006 proposed seven different OSS project success measures: system and information quality, user satisfaction, use, individual and organizational impacts, project output, process, and outcomes of project members[7]. Lee et al. in 2009 identified five different measures of OSS project success based on IS literature: software quality, use, user satisfaction, individual net benefits, community service quality. Subramaniam measured OSS project success by developer interest, user interest, program activity[15]. Some other researchers proposed to measure OSS success by measuring developers behavior. Luis et al. measured OSS success by developers loyalty[16].
+These literature indicate that success measures are multidimensional. Grewal proposed intuitive measures of OSS project success, technical success assessed by CVS commits and commercial success which is assessed by number of download[17]. CVS is the indicator which shows how frequent the software is updated. Many researchers use CVS commits as project technical success and download as commercial success. In this research, we use number of cvs commits to measure project success.
 
-FLOSS/OSS project success has been discussed in Software engineering field and Social Science field. As following papers did.
+### How to assess project success
 
-About OSS success itself.
-- Nitin A, Urvashi R.(2006), Defining success for software projects: An exploratory revelation, International Journal of Project Management, 24(4), 358–370
 
-- Kevin C, et al. (2006), Information Systems Success in Free and Open Source Software Development: Theory and Measures, Software Process Improvement and Practice, 11(2), 123-148
+
+
+
+
+
+<!--
+OSS success measures and factors of OSS success are well researched by many researchers. Nitin A, et al figured out in their quantitative research that software professionals such as developers, project managers, customer account managers in any situation urgent, general, order of preference consider functionality is most important for software project success.[6]
+Crowston, et al in 2006 suggested to use software quality, user satisfaction to  measure OSS success[8].
+-->
+
 
 - Kevin C, et al. (2012), Free/Libre Open-Source Software Development: What We Know and What We Do Not Know, ACM Computing Surveys, 44(2), Article 7
 
