--- a/2.LiteratureReview/2.2.OSSProjectSuccess.md
+++ b/2.LiteratureReview/2.2.OSSProjectSuccess.md
@@ -1,33 +1,16 @@
 ## 2.2.1 OSS Project Success
 OSS success is one main topic in OSS research area which is about OSS success measures and how to assess project success.
+
 ### Success measures
 In previous literature, several OSS project success measures have been proposed.
-Based on OSS development and IS related field, Crowston, et al in 2006 proposed seven different OSS project success measures: system and information quality, user satisfaction, use, individual and organizational impacts, project output, process, and outcomes of project members[7]. Lee et al. in 2009 identified five different measures of OSS project success based on IS literature: software quality, use, user satisfaction, individual net benefits, community service quality. Subramaniam measured OSS project success by developer interest, user interest, program activity[15]. Some other researchers proposed to measure OSS success by measuring developers behavior. Luis et al. measured OSS success by developers loyalty[16].
-These literature indicate that success measures are multidimensional. Grewal proposed intuitive measures of OSS project success, technical success assessed by CVS commits and commercial success which is assessed by number of download[17]. CVS is the indicator which shows how frequent the software is updated. Many researchers use CVS commits as project technical success and download as commercial success. In this research, we use number of cvs commits to measure project success.
+Based on OSS development and IS related field, Crowston, et al in 2006 proposed seven different OSS project success measures: system and information quality, user satisfaction, use, individual and organizational impacts, project output, process, and outcomes of project members[7]. Lee et al. in 2009 identified five different measures of OSS project success based on IS literature: software quality, use, user satisfaction, individual net benefits, community service quality. Subramaniam measured OSS project success by developer interest, user interest, program activity[15]. Some other researchers proposed to measure OSS success by measuring developers behavior. Luis et al. measured OSS success by developers loyalty[16]. Shobha used project members population as representation development community success[17].
+These literature indicate that success measures are multidimensional. Grewal proposed intuitive measures of OSS project success, technical success assessed by CVS commits and commercial success which is assessed by number of download[18]. CVS is the indicator which shows how frequent the software is updated. Many researchers use CVS commits as project technical success and download as commercial success. In this research, we use number of cvs commits to measure project success.
 
-### How to assess project success
+### Relationship between OSS project success and OSS characteristics
+Examining the relationship between success and other variables of OSS projects is more frequently focused in research field. Some researchers focus on relationship between projects characteristics and success. And others focus on OSS project network.
+License choice is one of the most frequently researched characteristics of OSS project. Stewart[19] showed License choice and organizational sponsorship have a positive relation to developer interest to a project. Lerner and Tirole[20] showed that the more restrictive licenses are more common in projects geared toward end users, with applications such as games and desktop applications, in languages other than English, and designed for a noncommercial user environment or operating system
+consistent with theory, community contributions are greater when restrictive licenses are employed. Midha and Palviab[21] conduct longitudinal analysis which examine the relationship between project technical and market success and License type.
 
-
-
-
-
-
-
-<!--
-OSS success measures and factors of OSS success are well researched by many researchers. Nitin A, et al figured out in their quantitative research that software professionals such as developers, project managers, customer account managers in any situation urgent, general, order of preference consider functionality is most important for software project success.[6]
-Crowston, et al in 2006 suggested to use software quality, user satisfaction to  measure OSS success[8].
--->
-
-
-- Kevin C, et al. (2012), Free/Libre Open-Source Software Development: What We Know and What We Do Not Know, ACM Computing Surveys, 44(2), Article 7
-
-- Subramaniam, C. (2009), Determinants of open source software project success: A longitudinal study, Decision Support Systems, (46) 576-585
-
-
-And many others papers are focusing on OSS project characteristics and success relationship or pattern.
-
-- K.J. Stewart, A.P. Ammeter, L.M. Maruping. (2006), Impacts of License Choice and Organizational Sponsorship on User Interest and Development Activity in Open Source Software, Information Systems Research 17(2), 126-144
-K.J. Stewart, et al(2006) found the License choice has significant effect on OSS project success.
 
 
 ## 2.2.2 OSS Project as a Network
