project as network

--- a/2.LiteratureReview/2.2.OSSProjectSuccess.md
+++ b/2.LiteratureReview/2.2.OSSProjectSuccess.md
@@ -10,17 +10,8 @@ These literature indicate that success measures are multidimensional. Grewal pro
 Examining the relationship between success and other variables of OSS projects is more frequently focused in research field. Some researchers focus on relationship between projects characteristics and success. And others focus on OSS project network.
 License choice is one of the most frequently researched characteristics of OSS project. Stewart[19] showed License choice and organizational sponsorship have a positive relation to developer interest to a project. Lerner and Tirole[20] showed that the more restrictive licenses are more common in projects geared toward end users, with applications such as games and desktop applications, in languages other than English, and designed for a noncommercial user environment or operating system
 consistent with theory, community contributions are greater when restrictive licenses are employed. Midha and Palviab[21] conduct longitudinal analysis which examine the relationship between project technical and market success and License type.
-
+Scacchi[22] examined the importance of software version control systems such as CVS or Subversion, for coordinating development and for mediating control over source code development when multiple developers may be working on any given portion of the code at once. They also discussed the interrelation of CVS use and email use (i.e., developers checking code into the CVS repository discuss the patches via email). Michlmayr[23] tested the importance of bug trackers to coordinate among those working on questions and answers. Lancashire[24] examined the geographical locations of Linux developers and distribution. Bonaccorsi[1] figured out that firm's involvement has positively related to project success.
 
 
 ## 2.2.2 OSS Project as a Network
-
-Open Source Software is modeled as social network of Developers and Projects.
-There are also quite a few research from network analysis on OSS communication like mailing list, online forum.
-
-- Madey, G.(2002), The Open Source Software Development Phenomenon: An analysis based on social network theory, American Conference on Information Systems
-
-- Rajdeep, G(2006), Location, Location, Location: How Network Embeddedness Affects Project Success in Open Source Systems
-
-
-- Signh, P.V., et al.(2011), Network Effects The Influence of Structural Social Capital on Open Source Project Success
+Quite a few papers focused on OSS project as a network. Madey[25] proposed that OSS project is modeled as collaboration network. They construct network with nodes developers who are involving in the same project and each pair of nodes have a tie if they have collaboration experience beforehand. Some researchers examined the relationship between network characteristics of the OSS projects collaboration network and project success. Rajdeep[18] figured out network embeddedness of projects or project managers has positive effect on project success using collaboration network. Signh et al[26] revealed that internal cohesion of OSS project network has positively related to project success.
