Fix construction literature review

--- a/2.LiteratureReview/2.0.LiteratureReview.md
+++ b/2.LiteratureReview/2.0.LiteratureReview.md
@@ -1,2 +1,2 @@
-# 2.0
-In OSS field, there arevariety of research. Grewal, R(2013) conducted quantitative analysis on whole OSS research. Two main waves of analysis are motivation research and success research.
+# Literature Review
+In OSS field, there are variety of research. Grewal, R(2013) conducted quantitative analysis on whole OSS research. Two main waves of analysis are motivation research and success research.
