--- a/2.LiteratureReview/2.1.OSSParticipationMotivation.md
+++ b/2.LiteratureReview/2.1.OSSParticipationMotivation.md
@@ -1,4 +1,4 @@
-# 2.1. OSS participation motivation
+## 2.1. OSS participation motivation
 Because OSS development is not commercial oriented activity, many researchers questioned why individual developers participate in OSS software. Motivation research were often conducted with qualitatively.
 As a result of many research, there are mainly two groups of motivation of individual developers, which are intrinsic and extrinsic motivation [4,5,8].
 Hann et al in 2004[4] and Lerner and Tirole in 2002[5] revealed that reputation is one of the biggest motivation of developers to involving in OSS project development.
