change file name, Literature review oss firms involvement

--- a/2.LiteratureReview/2.3.OSSAndFirmInvolvement.md
+++ b/2.LiteratureReview/2.3.OSSAndFirmInvolvement.md
@@ -1,1 +1,3 @@
 ## 2.3. OSS and Firm's Involvement
+Firm's involvement is more frequently researched topic recently. More and more firms are involving in OSS as a sponsors, users, developers. For firms, there are several different positions to take part in OSS development. Firms are developing their software as OSS, or develop their software privately and publish part of those software after finish developing them. Firms sometimes involving in OSS projects by sponsoring to the projects which they use. They sometimes spend internal resources like employees to improve existing OSS projects.
+Stewart[2] figured out firm's sponsorship has positively affect developers and user interest in projects. Bonaccorsi and Rossi[1] found that firm's involvement has positively related to project success.
