--- a/3.ResearchModelAndHypothesis/3.1.ResearchModel.md
+++ b/3.ResearchModelAndHypothesis/3.1.ResearchModel.md
@@ -1,10 +1,17 @@
 ## 3.1. Research Model
 ### 3.1.1 Firm's involvement to OSS Development
 
-### 3.1.2 Network Construction
+### 3.1.2 Open Source Developers Collaboration Network
+OSS development start with some developer publish his/her source code of software on hosting sites. Other developers who are intersted in the software getting involving in the project by requesting code additions or modifications to the project. Once they participate in the project, they keep picking up tasks voluntarily. They collaborate as a virtual team and incorporate their code into single code base. Once code base become executable single software, it is released on the Internet for users to use in production and give feedback. Software continues evolving by developers after releasing on the Internet, new features added, existing features get modified, bugs fixed. Developers are collaborating with others across the Internet.
+Because developers are participating in multiple projects, they can belong to multiple projects at the same time. Developers can have collaboration relationship with each other if they share collaboration experience in other projects previously. Using this relationship between pair of developers, we can construct collaboration network for each project(Figure). Each node represents individual developer, each pair of nodes have tie if they have collaboration experience previously.
+<!-- Some figures of OSS developers network. -->
 
 ### 3.1.3 Internal Cohesion of Network
 
 ### 3.1.4 Degree Centrality of Project Manager
 
-### 3.1.1 Project Success Measure
+### 3.1.5 Project Success Measure
+
+### 3.1.6 Controls
+#### age
+#### size
