--- a/1.Introduction/1.0.Introduction.md
+++ b/1.Introduction/1.0.Introduction.md
@@ -1,13 +1,9 @@
-In recent years, most commercial firms are involving in Open Source Software. Not only as users of software, but also involving in as developers.
-Different from some well known OSS project ran by enterprise such RedHat which is one of most famous distribution of Linux Operating System, many firms develop software for their own sake and distribute it as OSS for other developers in OSS community.
+# Recent OSS
+Recent years,  most commercial software firms are involving in Open Source Software(let's say OSS). It differs how firms are involving in. Most of the firms are just users of software, but some of them are sponsoring to OSS project, the others are involving as developers or owners of OSS projects. Different from some well known OSS project ran by enterprise such RedHat which is one of most famous distribution of Linux Operating System, many firms develop software for their own use and publish it as OSS for other developers in OSS community. In such trend, our research objective is to figure out how firm's involvement change the OSS project development.
 
-Bonaccorsi and Rossi in 2006[1] revealed that the motivation of commercial firm is mostly economical reasons. On the other hand many researchers found that motivation of individual developers are extrinsic motivation such as their career development, or intrinsic motivation such as reputation, enjoyment.
-Firms hosting OSS projects are hoping other developers to help they develop new features or maintain code. It eventually help their success.
-In OSS research field, there are many papers about what lead to OSS project success.
-Stewart[2] and many other found License type choice is significantly related to project success. Technology use is also important to project success(Scacchi 2004[3]). There is another big stream of OSS research which takes OSS project development as a network and conduct quantitative analysis on network characteristics and project success.
-Madey in 2002 figured out OSS development community is modeled as collaboration network.
-Grewal find out network embeddedness has significantly positive effect on project success.
+# OSS Development
+OSS development is mainly done by 6 steps. Firstly, Individual developer or firm publish software as Open Source or start developing software open. Then as developing theirselves, the software will become recognized by developers or firms who are interested in the similar projects. The developers who recognize the projects consider what project is for, how project work, who are involving in the projects, etcetera and decide to participate in the project development or not. Once the developer decide to participate in, he/she voluntarily pick a task and write code for it. Then requesting the project manager to merge the code into software. Manager review the request and code to decide whether accept the request or not. If rejected the code, developer can fix or modify the code again and again until the request is accepted. After merging requests several times, project owner releases new version of the software for users to test it and give feedback. This is how OSS development work. When the development is continuing in high frequency of update, it leads to the OSS project success.
 
-By searching many OSS research, it eventually revealed that there are a lot of research that show relationship of project success and other characteristics. But there are few research that how involvement by firms change OSS development and project success.
+When starting new projects, the motivation for individual developers and commercial firms are completely different[Bonaccorsi and Rossi 2006]. And the motivations of developers depend on the firm is involving in the project or not[Bonaccorsi 2006]. It differs between the developers having experience in the community and developers who are new to the community. New developers are more motivated with their learning opportunities and career development than who have more experience and skill and firms involvement brings those opportunities than individual developers[Rossi]. And this might lead to the OSS development communities different from developers network perspective.
 
-Our research objective is to figure out how firm's involvement change the OSS project as developer network. Specifically, figure out how firm's involvement change the network characteristics of the developers network and how it moderate the effect to project success.
+In OSS research field, there are a lot of research of participation motivations of individual developers and firms. Project success research is one of the most frequently investigated topic in OSS research. But there are few research which investigated the relationship of firm's involvement and developers network and project success. In this research, we investigate how firm's involvement change the OSS project as developer network. Specifically, figuring out how firm's involvement change the network characteristics of the developers network and how it moderate the effect to project success.
